Решение 0100_Same_Tree